source/sass/blocks/hero.scss
.hero {
  display: flex;
  min-height: calc(100vh - 74px);
  align-items: center;
  overflow: hidden;
  max-height: 768px;

  @include viewport--lg {
    align-items: flex-start;
  }
}

.hero__left {
  min-width: 570px;
  margin: 0;

  @include viewport--lg {
    padding-top: 118px;
    position: relative;
    z-index: 2;
  }
}

.hero__right {
  position: absolute;
  z-index: 1;
  transform: translateX(-100%);
  top: 74px;
  left: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: calc(100vh - 74px);
  background-color: $color-neon-blue;
  transition: transform .3s ease;

  @include viewport--lg {
    transform: none;
    display: block;
    padding-top: 46px;
    position: static;
    opacity: 1;
    background-color: $color-transparent;
  }
}

.hero__right--visible {
  transform: translateX(0%);
}

.hero__subtext {
  color: $color-default-white;
  margin: 0;
  display: block;
  max-width: 352px;

  @include viewport--lg {
    color: $color-default-black;
  }
}

.hero__picture {
  margin-bottom: 28px;
  transform: translate3d(0, 0, 0);
}

.hero__background-letter {
  display: none;

  @include viewport--lg {
    display: block;
    position: absolute;
    z-index: -1;
    top: 117px;
    left: 50%;
    transform: translate(-50%, 0px);

    svg {
      display: block;
    }
  }
}

@include viewport--lg {
  .dino-picture__flag {
    fill: $color-neon-blue;
    stroke: $color-neon-blue;
  }

  .dino-picture__lightning-blue {
    fill: $color-neon-blue;
  }

  .dino-picture__lightning-red {
    fill: $color-torch-red;
  }

  .dino-picture__lightning-violet {
    fill: $color-vivid-violet;
  }

  .dino-picture__lightning-violet-small {
    fill: $color-vivid-violet;
  }

  .dino-picture__roar-1 {
    fill: $color-neon-blue;
  }

  .dino-picture__roar-2 {
    fill: $color-neon-blue;
  }
}

